--- a/.github/workflows/build-mixed.yml
+++ b/.github/workflows/build-mixed.yml
@@ -33,7 +33,7 @@ jobs:
 
             - name: Build solution with MSBuild
               run: |
-                  "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\MSBuild.exe" "Financial Tracker.sln" /p:Configuration=Release
+                  "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\MSBuild.exe" "`"Financial Tracker.sln`"" /p:Configuration=Release
 
             - name: Publish C# app
               run: dotnet publish FInancialTrackerGUI/FInancialTrackerGUI.csproj -c Release -r win-x64 --self-contained true -o ./publish
